@@ -5,7 +5,7 @@ DIST dexml-0.4.2.tar.gz 23731 RMD160 c7c5b322e6f8d1f86bd5b06bb0f3ce2fc75bfae7 SH
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApKAACgkQzJrj3cAXR0lTdgCcDCOjyffVHYXwpRx9uCeWtNNR
-7EsAoKRzV0tLwYBRf4/nKcXke/3XVG3K
-=8ST8
+iEYEAREKAAYFAk9SPy8ACgkQzJrj3cAXR0lFDQCgiliJ2uSKu5DovzFCtcVa4WCQ
+ZfAAoLcW/MDEYGDQaotFWloFM0PrZ63l
+=4vQL
 -----END PGP SIGNATURE-----
