@@ -1,12 +1,10 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=3
 SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="*:2.5"
-# 2.4 is restricted because of conditional expressions
-RESTRICT_PYTHON_ABIS="2.4"
+PYTHON_DEPEND="*"
 
 inherit jnrowe-pypi
 
